--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "npm run build-only",
     "preview": "vite preview",
-    "build-only": "vite build"
+    "build-only": "vite build",
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
     "@vueform/slider": "^2.1.10",
@@ -27,6 +28,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "@types/node": "^24.0.14",
     "@vue/tsconfig": "^0.7.0",
-    "@tsconfig/node22": "^22.0.2"
+    "@tsconfig/node22": "^22.0.2",
+    "gh-pages": "^6.3.0"
   }
 }
