--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "vite",
     "build": "npm run build-only",
     "preview": "vite preview",
-    "build-only": "vite build",
-    "deploy": "npm run build && gh-pages -d dist"
+    "build-only": "vite build"
   },
   "dependencies": {
     "@vueform/slider": "^2.1.10",
@@ -20,15 +19,14 @@
     "vue-chartjs": "^5.3.2"
   },
   "devDependencies": {
-    "vite": "^7.0.5",
-    "@vitejs/plugin-vue": "^6.0.0",
-    "typescript": "~5.8.3",
-    "vue-tsc": "^3.0.2",
-    "tailwindcss": "^4.1.11",
     "@tailwindcss/vite": "^4.1.11",
-    "@types/node": "^24.0.14",
-    "@vue/tsconfig": "^0.7.0",
     "@tsconfig/node22": "^22.0.2",
-    "gh-pages": "^6.3.0"
+    "@types/node": "^24.0.14",
+    "@vitejs/plugin-vue": "^6.0.0",
+    "@vue/tsconfig": "^0.7.0",
+    "tailwindcss": "^4.1.11",
+    "typescript": "~5.8.3",
+    "vite": "^7.0.5",
+    "vue-tsc": "^3.0.2"
   }
 }
