--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "build-only": "vite build"
   },
   "dependencies": {
+    "@tonejs/midi": "^2.0.28",
     "@vueform/slider": "^2.1.10",
     "chart.js": "^4.5.0",
     "chartjs-plugin-annotation": "^3.1.0",
     "onnxruntime-web": "^1.22.0",
+    "tone": "^15.1.22",
     "vite-plugin-static-copy": "^3.1.1",
     "vue": "^3.5.17",
     "vue-chartjs": "^5.3.2"
